# Wifi-Scanner

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: macos-app.yml  release.yml  windows-exe.yml
crates/wifi-core/: Cargo.toml
crates/wifi-core/src/: lib.rs  mock.rs  model.rs  scanner.rs
crates/wifi-macos/: Cargo.toml
crates/wifi-macos/src/: lib.rs
crates/wifi-raw/: Cargo.toml
crates/wifi-raw/src/: channel.rs  ie.rs  lib.rs
crates/wifi-windows/: Cargo.toml
crates/wifi-windows/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  playwright.config.js  shot.cjs  vite.config.js
frontend/e2e/: ui.integration.spec.js
frontend/src/: main.js  style.css  ui-fixture.json
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: Cargo.toml
tests/src/: main.rs
tests/tests/: e2e_abstraction.rs
