[workspace]
resolver = "2"
members = [
    "crates/wifi-raw",
    "crates/wifi-core",
    "crates/wifi-windows",
    "crates/wifi-macos",
    "tests",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
