[package]
name = "wifi-scanner-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wifi_scanner_app_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
wifi-core = { path = "../crates/wifi-core" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
