[package]
name = "wifi-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
wifi-raw = { path = "../wifi-raw" }

[target.'cfg(windows)'.dependencies]
wifi-windows = { path = "../wifi-windows" }

[target.'cfg(target_os = "macos")'.dependencies]
wifi-macos = { path = "../wifi-macos" }
