[package]
name = "wifi-macos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wifi-raw = { path = "../wifi-raw" }

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3.1"
objc2 = "0.6.4"
objc2-core-location = "0.3.2"
objc2-core-wlan = "0.3.2"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSArray", "NSData", "NSError", "NSString", "NSSet"] }
