[package]
name = "wifi-windows"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wifi-raw = { path = "../wifi-raw" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WiFi",
    "Win32_System_Memory",
]
